# data-agora

./: .gitignore  Makefile  README.md  paper.tex  pyproject.toml
agora/: agora.py  serve.py
agora/core/: parsers.py  prompt_loaders.py  validators.py
agora/core/llms/: litellm.py  test.py
agora_scripts/: convert_jsonl_to_json.py  custom_code_template.py  run.py  upload_to_hf.py
agora_scripts/prompts/: instance_generation_code_prompt_json_formatted.txt  instance_generation_general_prompt.txt  instance_generation_general_prompt_json_formatted.txt  instance_generation_math_prompt_json_formatted.txt  quality_enhancement_code_prompt.txt
docs/: _config.yml  index.markdown
docs/_data/: authors.yml
docs/_layouts/: default.html
docs/_site/about/: index.html
docs/assets/css/: styles.css
libs/data-agora/: Makefile  test.py
libs/data-agora/_prompts/: code_prompt.txt  fineweb_edu_prompt.txt  magpie_code_prompt.txt  magpie_general_prompt.txt  magpie_math_prompt.txt  math_prompt.txt  webinstruct_code_prompt.txt  webinstruct_general_prompt.txt  webinstruct_math_prompt.txt
libs/data-agora/tests/: conftest.py
libs/data-agora/tests/data_agora/: test_agora.py
libs/data-agora/tests/seed_data/: code_seed_data_subsampled.json  general_seed_data_subsampled.json  magpie_code_seed_data_10000_subsampled.json  magpie_general_seed_data_10000_subsampled.json  magpie_math_seed_data_10000_subsampled.json  (+3 more)
llama-recipes/: setup.py
llama-recipes/src/llama_recipes/: convert_fsdp_to_hf.py
train/: requirements.txt
train/src/llama_recipes/: convert_fsdp_to_hf.py
(+9 files in other folders)
