[tool.poetry]
name = "alchemy"
version = "0.0.1"
description = "Library for data augmentation to train LLMs"
authors = ["Juyoung Suk <juyoung@kaist.ac.kr>, Seungone Kim <seungone@cmu.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"
tqdm = "^4.66.5"
transformers = "^4.46.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
